_sass/jekyll-theme-leap-day.scss
/* ... */
@media print, screen and (max-width: 1060px) {

  div.wrapper {
    width:auto;
    margin:0;
  }

  nav{
    display: none;
  }

  header, section, footer {
    float:none;

    h1 {
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
      -o-text-overflow: ellipsis;
      -ms-text-overflow: ellipsis;
    }
  }

  #banner {
    width: 100%;

    .downloads {
        margin-right: 60px;
      }

    .fork {
    }

    #logo {
      margin-right: 15px;
    }
  }

  section {
    border:1px solid #e5e5e5;
    border-width:1px 0;
    padding:20px 0;
    margin: 190px auto 20px;
    max-width: 600px;
  }

  footer{
    text-align: center;
    margin: 20px auto;
    position: relative;
    left:auto;
    bottom:auto;
    width:auto;
    }
}

@media print, screen and (max-width: 1000px) {
  body {
    word-wrap:break-word;
  }

  header {
    padding:0px 0px;
    margin: 0;

    h1 {
      font-size: 32px;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
      -o-text-overflow: ellipsis;
      -ms-text-overflow: ellipsis;
    }

    p { display: none;}
  }

  #banner {
    top: 80px;

    .fork {
      float: left;
      display: inline-block;
      margin-left: 0px;
    position:fixed;
    left:20px;

      }
  }

  section {
    margin-top: 0px;
    margin-bottom: 0px;
    width: auto;
  }

  header ul, header p.view {
    position:static;
  }
}

@media print, screen and (max-width: 1024px) {
  body {
  }

  header{
    position: relative;
    padding: 0px 0px;
    min-height: 0px;

    h1 {
      font-size: 24px;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
      -o-text-overflow: ellipsis;
      -ms-text-overflow: ellipsis;
    }
  }
  section {
    margin-top: 0px;
  }

  #banner { display: none;}
  header ul {
    display:none;
  }
}

@media print {
  body {
    padding:0.4in;
    font-size:12pt;
    color:#444;
  }
}

@media print, screen and (max-height: 680px) {

  footer {
    text-align: center;
    margin: 20px auto;
    position: relative;
    left:auto;
    bottom:auto;
    width:auto;
  }
}

@media print, screen and (max-height: 480px) {
  nav {
    display: none;
  }

  footer {
    text-align: center;
    margin: 20px auto;
    position: relative;
    left:auto;
    bottom:auto;
    width:auto;
  }
}





.gallery-wrap {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  width: 100%;
  height: 70vh;
}

.item {
  flex: 1;
  height: 100%;
  background-position: center;
  background-size: cover;
  transition: flex 0.8s ease;
  
  &:hover{
    flex: 7;
  }
}

.item-1 { 
  background-image: url('https://mars.nasa.gov/msl-raw-images/proj/msl/redops/ods/surface/sol/04200/opgs/edr/ncam/NLB_770345493EDR_F1072484NCAM00256M_.JPG');
}

.item-2 { 
  background-image: url('https://mars.nasa.gov/msl-raw-images/msss/04202/mcam/4202MR1059130272102870C00_DXXX.jpg');
}

.item-3 { 
  background-image: url('https://mars.nasa.gov/msl-raw-images/proj/msl/redops/ods/surface/sol/04250/opgs/edr/ncam/NRB_774801663EDR_F1080222NCAM00200M_.JPG');
}

.item-4 { 
  background-image: url('https://mars.nasa.gov/msl-raw-images/msss/04202/mcam/4202ML1059130291702010C00_DXXX.jpg');
}

.item-5 { 
  background-image: url('https://mars.nasa.gov/msl-raw-images/proj/msl/redops/ods/surface/sol/04251/opgs/edr/ncam/NLB_774875074EDR_F1080438NCAM00274M_.JPG');
}



video {
  height: auto !important;
  width: 100% !important;
 /* margin-left: 1em;
  margin-right: 1em;
  border-radius: .3em; */
  display: block;
  background: repeating-linear-gradient(
			to left,
			transparent,
			transparent 54px,
			black 55px,
			black 55px
		),
		repeating-linear-gradient(
			to bottom,
			transparent,
			transparent 54px,
			grey 55px,
			grey 55px
		),
		linear-gradient(45deg, grey, black);
	
	background-attachment:fixed;
  transition: 3s cubic-bezier(0.1, 0.2, 0.3, 0.4);
  /*  transition: 4s cubic-bezier(.25,.1,.2,3); */
}

embed {
  
  width: 100%;
min-height: max-content;
}

iframe {
  margin:0px;
  width: 100%;
}



.twoPanelSpread {
  margin: 0px;
  padding: 0px;
  background: url(https://raw.githubusercontent.com/ThakaRashard/bubblegumpop/gh-pages/img/810MATRiX.webp)
    center repeat;
}

.row {
  border-radius: 0px;
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  width: 100%;
}

.panelColumn {
  display: flex;
  flex-direction: column;
  flex-basis: 100%;
  flex: 1;
  overflow: hidden;
}

.leftColumn {
  /* background-color: #2470FF; */
  width: 100%;
}

.leftColumn img {
  flex-shrink: 0;
  min-width: 100%;
  min-height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  overflow: hidden;
}

.rightColumn {
  /* background-color: #c9ff23; */
}
.rightColumn img {
  flex-shrink: 0;
  min-width: 100%;
  min-height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  overflow: hidden;
}




.top-container {

  padding: 0px;
  align-content: center;
 	max-width: 900px; 
	padding: 0px;
	margin-right: auto;
	margin-left: auto; 	
	/* opera does not like 'margin:20px auto' */
	/* background: #666; */
  width: 50%; /* ie5win fudge begins */
	text-align:left; 
}

/* 3_TO_6 panel spread ##LAUREN_IS_MY_WIFE_AS_WELL_as_LAURA */

/* FLEX_BOX_FOR_3_IMAGES */
.greenlineflex-container {

  display: flex;
   align-items: stretch; 
   flex-flow: row wrap;  
  flex-direction: row; 
  justify-content: center;
  align-content: stretch;
  height: auto;
width:100%;
  gap: 5px;

}

.greenlineflex-container > div{
 
  border: 1px solid #c9ff23;
  border-radius: 1px;
  padding: 8px;
}


:root {
  --magnifier: 8;
  --gap: 0vmax;
  --transition: 0.5s;
}

.pinupGallery {
  display: block;
  width: 100%;
  margin: 0 auto;
  display: flex;
  flex-wrap: wrap;
  gap: 0px;
  object-fit: contain;
}
.expandingGallery {
  width: 100%;
  height: 25vh;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: var(--gap);
}
/* ... */

